RESOLVED FIXED13364
REGRESSION: frame base URL is incorrect (some pages are not found)
https://bugs.webkit.org/show_bug.cgi?id=13364
Summary REGRESSION: frame base URL is incorrect (some pages are not found)
William Björklund
Reported 2007-04-16 10:56:18 PDT
Some linked pages return "not found" errors, though they are loaded without problem in other browsers. For example, the "English" button in the top right corner returns a 404 in Webkit but not in Firefox. Clicking on "Artister" in the menu and then on any artist name in the left column also returns a 404.
Attachments
reduced test case (1.99 KB, application/zip)
2007-04-22 05:53 PDT, Alexey Proskuryakov
no flags
Proposed fix - don't overwrite the (base)url if it's non-empty (4.45 KB, patch)
2007-07-20 15:23 PDT, Brady Eidson
darin: review+
Alexey Proskuryakov
Comment 1 2007-04-16 11:54:38 PDT
URL in TOT WebKit: http://www.peaceandlove.nu/index.php?page=english Correct URL: http://www.peaceandlove.nu/2007/index.php?page=english Looks like this is caused by an incorrect calculation of frame base URL: <FRAME SRC="2007/index.php" NAME="contents" NORESIZE FRAMEBORDER="no">
Alexey Proskuryakov
Comment 2 2007-04-16 11:57:13 PDT
*** Bug 13362 has been marked as a duplicate of this bug. ***
Brady Eidson
Comment 3 2007-04-16 18:29:34 PDT
Turns out this bug is not related to 13362. I regressed that bug to between 16068 and 16085. Turns out this one works fine on 16085 but I can confirm its broken in current ToT. I'm going to regress this one, and reopen 16085.
Brady Eidson
Comment 4 2007-04-16 19:24:54 PDT
Nevermind, I lied, I got confused with my multiple copies of webkit lying around. I think the original diagnosis was correct
Brady Eidson
Comment 5 2007-04-16 19:38:24 PDT
I'd wager real money this was caused by http://trac.webkit.org/projects/webkit/changeset/16081
Alexey Proskuryakov
Comment 6 2007-04-22 05:53:36 PDT
Created attachment 14135 [details] reduced test case
Darin Adler
Comment 7 2007-04-23 08:38:33 PDT
Brady Eidson
Comment 8 2007-07-20 15:23:53 PDT
Created attachment 15609 [details] Proposed fix - don't overwrite the (base)url if it's non-empty
Darin Adler
Comment 9 2007-07-20 15:34:49 PDT
Comment on attachment 15609 [details] Proposed fix - don't overwrite the (base)url if it's non-empty Nonexistent has an "e" in it, not an "a". + (WebCore::Document::open): Only set the url and baseURL in document.open if the are still empty or about:blank "they are" r=me
Alexey Proskuryakov
Comment 10 2007-07-21 00:13:41 PDT
Landed by Brady in r24491.
Note You need to log in before you can comment on or make changes to this bug.