LayoutTests:

Reviewed by Darin

        <rdar://problem/5153021> and http://bugs.webkit.org/show_bug.cgi?id=13364

        * fast/frames/frame-base-url-expected.txt: Added.
        * fast/frames/frame-base-url.html: Added.
        * fast/frames/resources/subframe-base-url.html: Added.

WebCore:

        Reviewed by Darin

        <rdar://problem/5153021> and http://bugs.webkit.org/show_bug.cgi?id=13364

        The issue here was that if a document in a subframe was loaded from a URL, but then a script did
        document.open or document.write during parsing, we would overwrite the document's url and baseurl
        with the parent frame's url.  WRONG!

        * dom/Document.cpp:
        (WebCore::Document::open): Only set the url and baseURL in document.open if they are still empty or about:blank



Canonical link: https://commits.webkit.org/19136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24491 268f45cc-cd09-0410-ab3c-d52691b4dbfc